[Fix] ToggleNav is now visible

--- a/app/components/ToggleNav/ToggleNav.scss
+++ b/app/components/ToggleNav/ToggleNav.scss
@@ -8,7 +8,7 @@
   height: 40px;
   width: 40px;
 
-  &__wrapper {
+  &__Wrapper {
     display: flex;
     align-items: center;
 
